--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 }
 
 .rounded-div {
-  @apply border border-secondary rounded-2xl shadow-xl bg-primary px-2 max-w-[1140px] w-full mx-auto
+  @apply border border-secondary rounded-xl shadow-xl bg-primary px-2 max-w-[1140px] w-full mx-auto
 }
 
 .dark {
